/*VERSION 0.2.1*/
*Unupdated lines bug fixed.
*Fuzzy cursor at border bug fixed.
*Incorrect display of windows that 
extended beyond recording height fixed.
*Size adjustement that resulted in extra 
or missing pixels at borders has been corrected.
New adjustment is 8 pixels max,split evenly if possible.
*The option to drop frames has been added.
*The option to do better subsampling has been added.
*Default behavior now is to use shared memory when 
size of image gets over 75% of total (or a user set threshold).
*Many other minor bugfixes.


/*VERSION 0.2.2*/
*Changes to the configure script.
*BGR to YUV convertion corrected.

/*VERSION 0.2.3*/
*Problems on big-endian architectures, corrected 
(thanks to Marcel Unbehaun for bringing up the problem
and providing the neccessary feedback to resolve it).
*Failure to respect change in channels number, while 
opening soundcard, which resulted in crashes, segfaults
and repeated error-messages has been fixed.
*other minor bugfixes

/*VERSION 0.2.4*/
*Behavior on lack of $DISPLAY evironment 
variable has been corrected.
*Size adjustment is now quantized at 16 pixels, 
in order to avoid complete image distortion,
present at certain resolutions, when using shared memory
(conditional or not).
*Some other minor bugfixes, related mostly to default
values of options.

/*VERSION 0.2.5*/
*Drawing of the correct cursor is now supported through
the Xfixes extension.
*Change of behavior on lack of any Xserver extension and 
failure to open sound device. The program now exits and informs
instead of continuing with a different configuration.
*Exit status also indicates the nature of any error that occured.
*Documentation has been updated with exit status explanations.
*Subsampling of the chroma planes is made by averaging, while 
pixel discarding is an option(used to be otherwise).


/*VERSION 0.2.6*/
*internal framedrop counter