@@ -238,13 +238,16 @@ pthread_cond_t  *time_cond,*pause_cond;
 unsigned char   Yr[256],Yg[256],Yb[256],
                 Ur[256],Ug[256],Ub[256],
                 Vr[256],Vg[256],Vb[256];
+//the following values are of no effect
+//but they might be usefull later for profiling
 unsigned int frames_total,//frames calculated by total time expirations
-             frames_lost,//the value of shame
-             frames_to_add;//number of fake packets to be fed into the ogg stream
+             frames_lost;//the value of shame
 //used to determine frame drop which can 
 //happen on failure to receive a signal over a condition variable
 int capture_busy,
     encoder_busy;
+
+
 /**Macros*/
 
 #define CLIP_EVENT_AREA(e,brwin,wgeom){\
